Fix client list reversing order with bottom-aligned settings
Client List will now be in the same order as with top-aligned settings

--- a/style.css
+++ b/style.css
@@ -72,8 +72,12 @@ main:not(.aligned_to_top) {
 
 .client_list, .channel_list {
     display: flex;
-    flex-direction: var(--alignment-vertical);
+    flex-direction: column;
     align-items: var(--alignment-horizontal);
+}
+
+.channel_list {
+    flex-direction: var(--alignment-vertical);
 }
 
 .client_list {
